# multimedia_multimedia_cangjie_wrapper

./: README.md  README_zh.md  bundle.json
kit/CameraKit/: BUILD.gn  index.cj
kit/ImageKit/: BUILD.gn  index.cj
kit/MediaKit/: BUILD.gn  index.cj
kit/MediaLibraryKit/: BUILD.gn  index.cj
ohos/file/photo_access_helper/: BUILD.gn  album.cj  fetch_result.cj  media_album_change_request.cj  media_asset_change_request.cj  photo_accesshelper.cj  photo_accesshelper_ffi.cj  photo_accesshelper_utils.cj  photo_asset.cj
ohos/file/photo_access_helper/src/: album.cj  fetch_result.cj  media_album_change_request.cj  media_asset_change_request.cj  photo_accesshelper.cj  photo_accesshelper_ffi.cj  photo_accesshelper_utils.cj  photo_asset.cj
ohos/multimedia/: BUILD.gn  multimedia.cj
ohos/multimedia/camera/: BUILD.gn  camera.cj  camera_ability.cj  camera_common.cj  camera_ffi.cj  camera_input.cj  camera_manager.cj  camera_output.cj  camera_session.cj  metadata_output.cj  photo_output.cj  preview_output.cj  video_output.cj
ohos/multimedia/fetchdata/: BUILD.gn
ohos/multimedia/fetchdata/src/: fetchdata.cj
ohos/multimedia/image/: BUILD.gn  cj_image_common.cj  cj_image_enum.cj  cj_image_log.cj  cj_image_utils.cj  image.cj  image_creator.cj  image_packer.cj  image_receiver.cj  image_source.cj  pixel_map.cj
ohos/multimedia/media/: BUILD.gn  avimage_generator.cj  avmetadata_extractor.cj  media_common.cj  media_ffi.cj
test/APILevel21/camera/test/: profile.json
test/APILevel21/camera/test/entry/src/main/: module.json5
test/APILevel21/camera/test/entry/src/main/cangjie/src/: Test_camera.cj  ability_stage.cj  main_ability.cj
test/APILevel21/image/test/entry/src/main/cangjie/src/: main_ability.cj
test/APILevel21/media/test/entry/src/main/cangjie/src/: test_list_media.cj
test/APILevel21/photo_accesshelper/test/entry/src/main/cangjie/src/: Test_photoAccesshelper.cj  unittest_engine_pure_trunk.cj
test/APILevel22/camera/test/entry/src/main/cangjie/src/: ability_stage.cj  test_list_camera.cj  unittest_engine.cj
test/APILevel22/image/test/entry/src/main/cangjie/src/: Test_image.cj
test/APILevel22/media/test/: profile.json
test/APILevel22/media/test/entry/src/main/cangjie/src/: Test_AVImageGenerator.cj
test/APILevel22/photo_accesshelper/test/: .gitignore  profile.json
test/APILevel22/photo_accesshelper/test/entry/src/main/cangjie/src/: Test_photoAccesshelper.cj  unittest_engine_pure_trunk.cj
test/camera/test/entry/src/main/cangjie/src/: Test_camera.cj  index.cj  main_ability.cj
test/image/test/entry/src/main/cangjie/src/: Test_image.cj  pic.cj  test_list_image.cj
test/media/: build.py
test/media/test/entry/src/main/: module.json5
test/media/test/entry/src/main/cangjie/src/: Test_AVImageGenerator.cj
test/media/test/entry/src/main/resources/rawfile/: zimu.srt
test/photo_accesshelper/test/.bitfun/: .dss_initialized
test/photo_accesshelper/test/entry/src/main/: module.json5
test/photo_accesshelper/test/entry/src/main/cangjie/: run.txt
test/photo_accesshelper/test/entry/src/main/cangjie/src/: Test_photoAccesshelper.cj  test_list_photoAccesshelper.cj
