# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("MediaLibraryKit") {
  sources = ["index.cj"]

  cj_deps = [
    "../../ohos/file/photo_access_helper:ohos.file.photo_access_helper",
  ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.app.ability.ui_ability"
  ]
  subsystem_name = "multimedia"
  part_name = "multimedia_cangjie_wrapper"
}
