# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.multimedia.photo_accesshelper") {
  sources = [
    "src/album.cj",
    "src/fetch_result.cj",
    "src/media_album_change_request.cj",
    "src/media_asset_change_request.cj",
    "src/photo_accesshelper.cj",
    "src/photo_accesshelper_ffi.cj",
    "src/photo_accesshelper_utils.cj",
    "src/photo_asset.cj",
  ]

  cj_deps = [
    "../../multimedia/image:ohos.image",
    "../../multimedia/fetchdata:ohos.multimedia.fetchdata",
  ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.ability",
    "arkui_cangjie_wrapper:ohos.base",
    "bundlemanager_cangjie_wrapper:ohos.bundle_manager",
    "distributeddatamgr_cangjie_wrapper:ohos.data_share_predicates",
    "cangjie_ark_interop:ohos.ffi",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "global_cangjie_wrapper:ohos.resource_manager",
    "cangjie_ark_interop:ohos.labels",
  ]

  external_deps = [ "media_library:cj_photoaccesshelper_ffi" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_cangjie_wrapper"
  lib_name = "multimedia.photo_accesshelper"
}
