# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.multimedia.camera") {
  sources = [
    "camera.cj",
    "camera_ability.cj",
    "camera_common.cj",
    "camera_ffi.cj",
    "camera_input.cj",
    "camera_manager.cj",
    "camera_output.cj",
    "camera_session.cj",
    "photo_output.cj",
    "preview_output.cj",
    "video_output.cj",
  ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.app.ability.ui_ability",
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.callback_invoke",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "graphic_cangjie_wrapper:ohos.graphics.color_space_manager",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "camera_framework:cj_camera_ffi" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_cangjie_wrapper"
}
