# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.image") {
  sources = [
    "cj_image_common.cj",
    "cj_image_enum.cj",
    "cj_image_log.cj",
    "cj_image_utils.cj",
    "image.cj",
    "image_creator.cj",
    "image_packer.cj",
    "image_receiver.cj",
    "image_source.cj",
    "pixel_map.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
    "global_cangjie_api:ohos.resource_manager",
    "graphic_cangjie_api:ohos.color_manager",
    "hiviewdfx_cangjie_api:ohos.hilog",
  ]

  external_deps = [ "image_framework:cj_image_ffi" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_cangjie_api"
  lib_name = "image"
}
