# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The Cangjie API is in Beta. For details on its capabilities and limitations, please refer to the README file.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.multimedia.image") {
  sources = [
    "cj_image_common.cj",
    "cj_image_enum.cj",
    "cj_image_log.cj",
    "cj_image_utils.cj",
    "image.cj",
    "image_packer.cj",
    "image_receiver.cj",
    "image_source.cj",
    "pixel_map.cj",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.callback_invoke",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "global_cangjie_wrapper:ohos.resource_manager",
    "graphic_cangjie_wrapper:ohos.graphics.color_space_manager",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  external_deps = [ "image_framework:cj_image_ffi" ]

  subsystem_name = "multimedia"
  part_name = "multimedia_cangjie_wrapper"
}
