# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.multimedia_media") {
  sources = [
    "avimage_generator.cj",
    "media_common.cj",
    "media_ffi.cj"
   ]

  cj_deps = [
    "../../file/photo_access_helper:ohos.multimedia.photo_accesshelper",
  ]

  cj_external_deps = [
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "multimedia_cangjie_wrapper:ohos.image",
  ]

  external_deps = [
    "player_framework:cj_avplayer_ffi",
    "player_framework:cj_avscreen_capture_ffi",
    "player_framework:cj_avtranscoder_ffi",
    "player_framework:cj_media_avrecorder_ffi",
    "player_framework:cj_metadatahelper_ffi",
    "player_framework:cj_soundpool_ffi",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_cangjie_wrapper"
  lib_name = "multimedia_media"
}
